changed LSRC definition to use $(IDL_SRC) instead of $(POA_CLT_SRCS), so that client.o is not put into libserver.a.  It caused link collisions on VxWorks.

--- a/trunk/TAO/examples/POA/Generic_Servant/Makefile
+++ b/trunk/TAO/examples/POA/Generic_Servant/Makefile
@@ -38,7 +38,7 @@ VLDLIBS = $(LDLIBS:%=%$(VAR))
 
 VBIN = $(BIN:%=%$(VAR))
 
-LSRC = $(addsuffix .cpp,$(LIB_SRC)) $(POA_CLT_SRCS)
+LSRC = $(addsuffix .cpp,$(LIB_SRC) $(IDL_SRC))
 LOBJ = $(addsuffix .o,$(LIB_SRC))
 
 #----------------------------------------------------------------------------
