--- a/trunk/docs/tutorials/015/Makefile
+++ b/trunk/docs/tutorials/015/Makefile
@@ -20,6 +20,7 @@ Depend : #
 HTML : #
 	[ -f hdr ] || $(MAKE) UNSHAR
 	perl ../combine *.pre
+	chmod +r *.html
 
 SHAR : #
 	[ ! -f combine.shar ] || exit 1
