--- a/trunk/docs/tutorials/013/Makefile
+++ b/trunk/docs/tutorials/013/Makefile
@@ -49,6 +49,18 @@ Indent : #
 Depend : depend
 	perl ../007/fix.Makefile
 
+HTML : #
+	[ -f hdr ] || $(MAKE) UNSHAR
+	perl ../combine *.pre
+	chmod +r *.html
+
+SHAR : #
+	[ ! -f combine.shar ] || exit 1
+	shar -T hdr bodies *.pre *.pst > combine.shar && rm -f hdr bodies *.pre *.pst
+
+UNSHAR : #
+	sh combine.shar
+
 .depend : #
 	touch .depend
 
