*** empty log message ***

--- a/trunk/docs/tutorials/006/Makefile
+++ b/trunk/docs/tutorials/006/Makefile
@@ -50,6 +50,7 @@ include	$(ACE_ROOT)/include/makeinclude/wrapper_macros.GNU
 include	$(ACE_ROOT)/include/makeinclude/macros.GNU
 include	$(ACE_ROOT)/include/makeinclude/rules.common.GNU
 include	$(ACE_ROOT)/include/makeinclude/rules.nonested.GNU
+include	$(ACE_ROOT)/include/makeinclude/rules.bin.GNU
 include	$(ACE_ROOT)/include/makeinclude/rules.local.GNU
 
 #----------------------------------------------------------------------------
@@ -82,8 +83,8 @@ Indent : #
 	# stuff back out of the Makefile and into a file ".depend" which we then
 	# include just like the makefile components above.
 Depend : depend
-	perl fix.Makefile
-	
+	perl ../fix.Makefile
+
 .depend : #
 	touch .depend
 
