--- a/trunk/docs/tutorials/007/Makefile
+++ b/trunk/docs/tutorials/007/Makefile
@@ -85,7 +85,7 @@ Indent : #
 	# stuff back out of the Makefile and into a file ".depend" which we then
 	# include just like the makefile components above.
 Depend : depend
-	perl fix.Makefile
+	perl ../fix.Makefile
 
 .depend : #
 	touch .depend
