Added LIBS += $(ACELIB) to make this build on AIX. This whole thing could be done away with by making the app build with the 2 source files, and not bother with the library.

--- a/trunk/netsvcs/clients/Naming/Dump_Restore/Makefile
+++ b/trunk/netsvcs/clients/Naming/Dump_Restore/Makefile
@@ -21,6 +21,8 @@ LSRC   	= $(addsuffix .cpp,$(FILES))
 LOBJ   	= $(LSRC:%.cpp=$(VDIR)%.o)
 SHOBJ	= $(addsuffix .so,$(FILES))
 
+LIBS    += $(ACELIB)
+
 LDLIBS 	= -lDump_Restore
  
 VLDLIBS = $(LDLIBS:%=%$(VAR))
