--- a/trunk/examples/DLL/Makefile.Newsweek
+++ b/trunk/examples/DLL/Makefile.Newsweek
@@ -1,21 +1,27 @@
 #----------------------------------------------------------------------------
 #	$Id$
 #
-#	Makefile for the DLL example
+#	Makefile for the Newsweek library in the DLL example
 #----------------------------------------------------------------------------
 
 #----------------------------------------------------------------------------
 #	Local macros
 #----------------------------------------------------------------------------
 
-BIN = test_dll
 
-FILES = test_dll
+
+SHLIB	= libNewsweek.$(SOEXT) 
+	 
+FILES 	= Newsweek
+
+LSRC	= $(addsuffix .cpp,$(FILES))
+
+VLDLIBS = $(LDLIBS:%=%$(VAR))
+
 
 #----------------------------------------------------------------------------
 #	Include macros and targets
 #----------------------------------------------------------------------------
-
 include		$(ACE_ROOT)/include/makeinclude/wrapper_macros.GNU
 include		$(ACE_ROOT)/include/makeinclude/macros.GNU
 include		$(ACE_ROOT)/include/makeinclude/rules.common.GNU
@@ -23,14 +29,6 @@ include		$(ACE_ROOT)/include/makeinclude/rules.nonested.GNU
 include		$(ACE_ROOT)/include/makeinclude/rules.lib.GNU
 include		$(ACE_ROOT)/include/makeinclude/rules.bin.GNU
 include		$(ACE_ROOT)/include/makeinclude/rules.local.GNU
-
-TODAY:
-	make -f Makefile.Today
-
-NEWSWEEK:
-	make -f Makefile.Newsweek
-
-all: TODAY NEWSWEEK $(BIN)
 
 #----------------------------------------------------------------------------
 #	Local targets
@@ -41,3 +39,5 @@ all: TODAY NEWSWEEK $(BIN)
 #----------------------------------------------------------------------------
 # DO NOT DELETE THIS LINE -- g++dep uses it.
 # DO NOT PUT ANYTHING AFTER THIS LINE, IT WILL GO AWAY.
+
+
