added LIBS=-lTAO to avoid build warning on DU 4.0

--- a/trunk/TAO/examples/POA/Generic_Servant/Makefile
+++ b/trunk/TAO/examples/POA/Generic_Servant/Makefile
@@ -38,6 +38,7 @@ VLDLIBS = $(LDLIBS:%=%$(VAR))
 
 VBIN = $(BIN:%=%$(VAR))
 
+LIBS = -lTAO
 LSRC = $(addsuffix .cpp,$(SHLIB_SRC))
 LOBJ = $(addsuffix .o,$(SHLIB_SRC))
 
